--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,20 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
+        //compile 'com.google.android.gms:play-services-location:16.0.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+       // implement 'io.nlopez.smartlocation:library:3.3.3'
+
+
+
+
     }
 }
 
@@ -18,6 +25,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+
         
     }
 }
