--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".DetailPagerActivity">
         </activity>
-        <service android:name="LogService"/>
+        <service android:name=".LogService"/>
     </application>
 
 </manifest>
